--- a/Lended/Base.lproj/Main.storyboard
+++ b/Lended/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Zsb-Gb-QAR">
-                                <rect key="frame" x="25" y="214" width="325" height="428"/>
+                                <rect key="frame" x="25" y="89" width="325" height="553"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="86q-LR-8dd">
                                     <size key="itemSize" width="211" height="211"/>
@@ -42,16 +42,16 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iF8-Aj-7sK">
                                                     <rect key="frame" x="0.0" y="0.0" width="211" height="211"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X9O-Ao-LhG">
-                                                            <rect key="frame" x="22.5" y="0.0" width="166" height="166"/>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X9O-Ao-LhG">
+                                                            <rect key="frame" x="30" y="15" width="151" height="151"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" secondItem="X9O-Ao-LhG" secondAttribute="height" multiplier="1:1" id="EB1-ej-XO4"/>
+                                                                <constraint firstAttribute="width" secondItem="X9O-Ao-LhG" secondAttribute="height" multiplier="1:1" id="M31-wY-vKo"/>
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2xG-aa-dXG">
                                                             <rect key="frame" x="0.0" y="181" width="211" height="30"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="30" id="gHe-Ku-yJo"/>
+                                                                <constraint firstAttribute="height" constant="30" id="GBy-VH-pia"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="15"/>
                                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -59,13 +59,11 @@
                                                         </label>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="X9O-Ao-LhG" firstAttribute="top" secondItem="iF8-Aj-7sK" secondAttribute="top" id="52o-1A-OFs"/>
-                                                        <constraint firstItem="2xG-aa-dXG" firstAttribute="top" secondItem="X9O-Ao-LhG" secondAttribute="bottom" constant="15" id="I5d-KN-uUP"/>
-                                                        <constraint firstItem="X9O-Ao-LhG" firstAttribute="top" secondItem="iF8-Aj-7sK" secondAttribute="top" id="OoP-kB-cjl"/>
-                                                        <constraint firstItem="X9O-Ao-LhG" firstAttribute="leading" secondItem="iF8-Aj-7sK" secondAttribute="leading" constant="22.5" id="VXC-Iu-ghY"/>
+                                                        <constraint firstItem="X9O-Ao-LhG" firstAttribute="top" secondItem="iF8-Aj-7sK" secondAttribute="top" constant="15" id="Kde-m1-3aT"/>
+                                                        <constraint firstItem="X9O-Ao-LhG" firstAttribute="centerX" secondItem="iF8-Aj-7sK" secondAttribute="centerX" id="cET-Yq-eWK"/>
                                                         <constraint firstItem="2xG-aa-dXG" firstAttribute="leading" secondItem="iF8-Aj-7sK" secondAttribute="leading" id="jiG-fh-pdt"/>
+                                                        <constraint firstItem="2xG-aa-dXG" firstAttribute="top" secondItem="X9O-Ao-LhG" secondAttribute="bottom" constant="15" id="le5-MG-5ti"/>
                                                         <constraint firstAttribute="bottom" secondItem="2xG-aa-dXG" secondAttribute="bottom" id="qOs-0O-Vb8"/>
-                                                        <constraint firstAttribute="trailing" secondItem="X9O-Ao-LhG" secondAttribute="trailing" constant="22.5" id="ulj-IY-4QP"/>
                                                         <constraint firstAttribute="trailing" secondItem="2xG-aa-dXG" secondAttribute="trailing" id="vT2-yG-tBf"/>
                                                     </constraints>
                                                 </view>
@@ -91,7 +89,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Zsb-Gb-QAR" firstAttribute="top" secondItem="7er-uW-Qz5" secondAttribute="bottom" constant="150" id="1CK-1e-xMQ"/>
+                            <constraint firstItem="Zsb-Gb-QAR" firstAttribute="top" secondItem="7er-uW-Qz5" secondAttribute="bottom" constant="25" id="1CK-1e-xMQ"/>
                             <constraint firstItem="44Z-yS-xhE" firstAttribute="top" secondItem="Zsb-Gb-QAR" secondAttribute="bottom" constant="25" id="BdL-Ub-Cs5"/>
                             <constraint firstItem="Zsb-Gb-QAR" firstAttribute="leading" secondItem="XNC-rg-pdZ" secondAttribute="leading" constant="25" id="kDU-2m-TWs"/>
                             <constraint firstAttribute="trailing" secondItem="Zsb-Gb-QAR" secondAttribute="trailing" constant="25" id="zVz-PC-43f"/>
