--- a/Lended/Base.lproj/Main.storyboard
+++ b/Lended/Base.lproj/Main.storyboard
@@ -400,21 +400,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="R3O-16-ZWW">
-                                <rect key="frame" x="0.0" y="64" width="414" height="572"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="xpd-VT-S4J">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xpd-VT-S4J" id="iVP-sd-ujl">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t8o-1T-uit">
                                 <rect key="frame" x="182.66666666666666" y="661" width="50" height="50"/>
                                 <color key="backgroundColor" red="0.31680542563094571" green="0.85486421130952372" blue="0.44418453776395467" alpha="1" colorSpace="calibratedRGB"/>
@@ -427,6 +412,92 @@
                                     <action selector="addButtonTapped:" destination="HLL-fJ-xWb" eventType="touchUpInside" id="wkO-E2-CAj"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="105" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="R3O-16-ZWW">
+                                <rect key="frame" x="0.0" y="64" width="414" height="572"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="loanCell" rowHeight="105" id="xpd-VT-S4J" customClass="LandingTableViewCell" customModule="Lended" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="105"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xpd-VT-S4J" id="iVP-sd-ujl">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="105"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PW3-2h-oCa">
+                                                    <rect key="frame" x="25" y="30" width="45.333333333333329" height="45"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="45" id="Mi0-Qz-oHd"/>
+                                                        <constraint firstAttribute="height" constant="45" id="sgr-82-Js3"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yTb-tT-pcx">
+                                                    <rect key="frame" x="35.333333333333343" y="30" width="44.666666666666657" height="45"/>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H6p-3n-kl0">
+                                                    <rect key="frame" x="44.999999999999993" y="30" width="45.333333333333321" height="45"/>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nPP-9x-CX1">
+                                                    <rect key="frame" x="55.333333333333343" y="30" width="44.666666666666657" height="45"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TgK-FM-a64">
+                                                    <rect key="frame" x="115" y="43.666666666666664" width="184" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pin-EL-CSO">
+                                                    <rect key="frame" x="314" y="43.666666666666664" width="75" height="18"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="75" id="DGR-6J-JqY"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="yTb-tT-pcx" firstAttribute="height" secondItem="PW3-2h-oCa" secondAttribute="height" id="0dH-vi-NXh"/>
+                                                <constraint firstItem="TgK-FM-a64" firstAttribute="leading" secondItem="nPP-9x-CX1" secondAttribute="trailing" constant="15" id="0h4-0n-aMb"/>
+                                                <constraint firstItem="H6p-3n-kl0" firstAttribute="leading" secondItem="yTb-tT-pcx" secondAttribute="trailing" constant="-35" id="6h5-6F-eIu"/>
+                                                <constraint firstItem="H6p-3n-kl0" firstAttribute="top" secondItem="PW3-2h-oCa" secondAttribute="top" id="CwB-VC-2Wo"/>
+                                                <constraint firstItem="PW3-2h-oCa" firstAttribute="leading" secondItem="iVP-sd-ujl" secondAttribute="leading" constant="25" id="KEw-Qv-HUB"/>
+                                                <constraint firstItem="nPP-9x-CX1" firstAttribute="leading" secondItem="H6p-3n-kl0" secondAttribute="trailing" constant="-35" id="Qqr-SM-iNq"/>
+                                                <constraint firstItem="yTb-tT-pcx" firstAttribute="leading" secondItem="PW3-2h-oCa" secondAttribute="trailing" constant="-35" id="UAG-NA-eMn"/>
+                                                <constraint firstItem="nPP-9x-CX1" firstAttribute="width" secondItem="PW3-2h-oCa" secondAttribute="width" id="Ud7-RF-WXn"/>
+                                                <constraint firstItem="yTb-tT-pcx" firstAttribute="top" secondItem="PW3-2h-oCa" secondAttribute="top" id="cpW-uG-yRG"/>
+                                                <constraint firstItem="Pin-EL-CSO" firstAttribute="centerY" secondItem="iVP-sd-ujl" secondAttribute="centerY" id="dDB-MY-hOf"/>
+                                                <constraint firstItem="H6p-3n-kl0" firstAttribute="height" secondItem="PW3-2h-oCa" secondAttribute="height" id="daJ-hb-o0Y"/>
+                                                <constraint firstItem="PW3-2h-oCa" firstAttribute="centerY" secondItem="iVP-sd-ujl" secondAttribute="centerY" id="ghz-i1-Cdh"/>
+                                                <constraint firstItem="nPP-9x-CX1" firstAttribute="top" secondItem="PW3-2h-oCa" secondAttribute="top" id="haJ-CU-bHl"/>
+                                                <constraint firstItem="yTb-tT-pcx" firstAttribute="width" secondItem="PW3-2h-oCa" secondAttribute="width" id="iDy-IF-vhr"/>
+                                                <constraint firstAttribute="trailing" secondItem="Pin-EL-CSO" secondAttribute="trailing" constant="25" id="imP-rO-aAc"/>
+                                                <constraint firstItem="H6p-3n-kl0" firstAttribute="bottom" secondItem="PW3-2h-oCa" secondAttribute="bottom" id="lD0-im-vNd"/>
+                                                <constraint firstItem="nPP-9x-CX1" firstAttribute="height" secondItem="PW3-2h-oCa" secondAttribute="height" id="lT9-m1-XY7"/>
+                                                <constraint firstItem="yTb-tT-pcx" firstAttribute="bottom" secondItem="PW3-2h-oCa" secondAttribute="bottom" id="lUH-vn-cB2"/>
+                                                <constraint firstItem="H6p-3n-kl0" firstAttribute="width" secondItem="PW3-2h-oCa" secondAttribute="width" id="nlM-LG-mjZ"/>
+                                                <constraint firstItem="TgK-FM-a64" firstAttribute="centerY" secondItem="iVP-sd-ujl" secondAttribute="centerY" id="rqc-gb-bsj"/>
+                                                <constraint firstItem="H6p-3n-kl0" firstAttribute="centerY" secondItem="iVP-sd-ujl" secondAttribute="centerY" id="sgC-sK-ejU"/>
+                                                <constraint firstItem="Pin-EL-CSO" firstAttribute="leading" secondItem="TgK-FM-a64" secondAttribute="trailing" constant="15" id="uXO-5x-bgA"/>
+                                                <constraint firstItem="nPP-9x-CX1" firstAttribute="bottom" secondItem="PW3-2h-oCa" secondAttribute="bottom" id="x6Z-4m-Y0G"/>
+                                                <constraint firstItem="nPP-9x-CX1" firstAttribute="centerY" secondItem="iVP-sd-ujl" secondAttribute="centerY" id="y3H-l0-GBx"/>
+                                                <constraint firstItem="yTb-tT-pcx" firstAttribute="centerY" secondItem="iVP-sd-ujl" secondAttribute="centerY" id="zhj-nX-ejQ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="materialDesign" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="amountLabel" destination="Pin-EL-CSO" id="O0J-FA-olk"/>
+                                            <outlet property="nameLabel" destination="TgK-FM-a64" id="pF5-GM-A4e"/>
+                                            <outlet property="profileImageFour" destination="nPP-9x-CX1" id="f7B-lk-Z1z"/>
+                                            <outlet property="profileImageOne" destination="PW3-2h-oCa" id="Bfs-7S-X7S"/>
+                                            <outlet property="profileImageThree" destination="H6p-3n-kl0" id="ukP-t7-Qsw"/>
+                                            <outlet property="profileImageTwo" destination="yTb-tT-pcx" id="9Oz-KL-hac"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
